name:                NicoThruLineFestival
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/snisimu/NicoThruLineFestival#readme
license:             BSD3
license-file:        LICENSE
author:              Shunji Nishimura
maintainer:          snisimu@gmail.com
copyright:           2017 Shunji Nishimura
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable NicoThruLineFestival
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , text
                     , bytestring
                     , utf8-string
                     , portable-lines
                     , network
                     , http-conduit
                     , containers
